--- a/match.html
+++ b/match.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DP World Asia Cup 2025 - Live Stream</title>
+    <meta name="monetag" content="f2af0a2360711f512a62d8d460aa36d0">
     <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
