--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@
         <a href="match.html" id="actionButton">Go To Live Match</a>
 
         <div class="ad-placeholder">
-             <!-- Another Adsterra Banner Ad Code Here -->
+             <script type="text/javascript">
+	atOptions = {
+		'key' : '6cd7e1423950edae05036677c78ed6b5',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6cd7e1423950edae05036677c78ed6b5/invoke.js"></script>
              <p>Advertisement</p>
         </div>
     </div>
