--- a/match.html
+++ b/match.html
@@ -216,6 +216,7 @@
 
         async function fetchMatchData() {
             try {
+                // === YEH LINE UPDATE KI GAYI HAI (Caching ko rokne ke liye) ===
                 const response = await fetch(`${GITHUB_URL}?v=${new Date().getTime()}`);
                 const data = await response.json();
                 
